--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -1,13 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>My Blogs</h2>
+<h2>My Blogs & Notes</h2>
 <ul>
   {% for blog in blogs %}
   <li>
     <h3>{{ blog.title }}</h3>
-    <a href="{{ url_for('static', filename='pdfs/' + blog.pdf) }}" target="_blank">📄 Read PDF</a>
+    {% if blog.type == 'pdf' %}
+      <a href="{{ url_for('static', filename='pdfs/' + blog.file) }}" target="_blank">📄 PDF</a>
+    {% elif blog.type == 'md' %}
+      <a href="{{ url_for('static', filename='pdfs/' + blog.file) }}" target="_blank">📝 Markdown</a>
+    {% endif %}
   </li>
   {% endfor %}
 </ul>
-<p><a href="{{ url_for('upload') }}">➕ Upload New Blog (Admin)</a></p>
+<p><a href="{{ url_for('upload') }}">➕ Upload New File (Admin)</a></p>
 {% endblock %}
