--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -7,11 +7,12 @@
     <h3>{{ blog.title }}</h3>
     {% if blog.type == 'pdf' %}
       <a href="{{ url_for('static', filename='pdfs/' + blog.file) }}" target="_blank">📄 PDF</a>
-    {% elif blog.type == 'md' %}
-      <a href="{{ url_for('static', filename='pdfs/' + blog.file) }}" target="_blank">📝 Markdown</a>
+    <!-- {% elif blog.type == 'md' %} -->
+      <!-- <a href="{{ url_for('static', filename='pdfs/' + blog.file) }}" target="_blank">📝 Markdown</a> -->
     {% endif %}
   </li>
   {% endfor %}
 </ul>
 <p><a href="{{ url_for('upload') }}">➕ Upload New File (Admin)</a></p>
 {% endblock %}
+
