--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -13,6 +13,7 @@
   </li>
   {% endfor %}
 </ul>
-<p><a href="{{ url_for('upload') }}">➕ Upload New File (Admin)</a></p>
+<p><a href="{{ url_for('upload') }}">Admin login</a></p>
 {% endblock %}
+
 
