--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Welcome!</h2>
-<p>Hi, I’m <b>Argha Patra</b> — a BS-MS Second Year Undergraduate Student in IISER Mohali.</p>
-<p>Explore my blogs and projects in biology, mathematics, and data analysis.</p>
-<img src="{{ url_for('static', filename='images/argha.jpg') }}" alt="Profile Photo" width="200" style="border-radius: 10px;">
+<h2>Hello visitor!</h2>
+<p>Welcome to my website. I am <b>Argha Patra</b>, currently persuing my BS-MS degree programme in IISER Mohali. At present, I am in my third semester, second year with Biology and Mathematics as my Pre-majors</p>
+<p>I am interested in learning and knowing new skills and gaining knowledge.</p>
+<img src="{{ url_for('static', filename='images/argha.jpg') }}" alt="Profile Photo" width="200" height="200" style="border-radius: 10px;">
 {% endblock %}
+
