--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -5,6 +5,8 @@
   {% for blog in blogs %}
   <li>
     <h3>{{ blog.title }}</h3>
+    {% if blog.type == 'md' %}
+      <a href="{{ url_for('view_md', name=blog) }}">{{ blog }}</a>
     {% if blog.type == 'pdf' %}
       <a href="{{ url_for('static', filename='pdfs/' + blog.file) }}" target="_blank">📄 PDF</a>
     <!-- {% elif blog.type == 'md' %} -->
@@ -15,5 +17,6 @@
 </ul>
 <p><a href="{{ url_for('upload') }}">Admin login</a></p>
 {% endblock %}
+
 
 
